updated Authentication
